carrito integrado y updates al JS, CSS y HTML

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -87,3 +87,56 @@ main button:hover {
   width: 80%;
   height: 50%;
 }
+
+#carritoContainer {
+  margin-top: 40px;
+  padding: 20px;
+  background-color: #f8f8f8;
+}
+
+.carrito-items {
+  width: 100%;
+  margin-bottom: 20px;
+  border-collapse: collapse;
+}
+
+.carrito-items th,
+.carrito-items td {
+  padding: 10px;
+  text-align: center;
+}
+
+.carrito-items th {
+  background-color: #333;
+  color: #fff;
+}
+
+.producto-imagen {
+  width: 80px;
+  height: 80px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.eliminar-btn {
+  padding: 5px 10px;
+  background-color: #d9534f;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.vaciar-carrito-btn {
+  padding: 10px 20px;
+  background-color: #d9534f;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.carrito-total {
+  font-weight: bold;
+  text-align: right;
+}
